# stk

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.def.h  x.c
src/: arg.h  config.h  st.c  st.h  win.h  x.c
